feat: add core module generator with Clean Architecture base classes
BREAKING CHANGES:
- Removed 'I' prefix from interfaces (use Impl suffix for implementations)
- BaseEntity no longer has createdAt/updatedAt (persistence layer concern)

New Features:
- Core module generator with 'nestjs-clean core' command
- BaseEntity with no persistence concerns
- AggregateRoot with domain events support
- ValueObject with private constructor pattern
- BaseRepository, DomainEvent, DomainEventHandler interfaces
- BaseUseCase and BaseMapper interfaces
- Result and Either monads for error handling
- All classes use proper TypeScript generics (no any/unknown)

The core module provides framework-agnostic base classes that can be
extended by domain entities following Clean Architecture principles.

--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "clean": "rm -rf dist",
     "compile": "tsc -p tsconfig.json",
     "copy:assets": "npm run copy:schemas && npm run copy:templates",
-    "copy:schemas": "cp schematics/collection.json dist/ && cp schematics/clean-module/schema.json dist/clean-module/",
-    "copy:templates": "cp -r schematics/clean-module/files dist/clean-module/",
+    "copy:schemas": "cp schematics/collection.json dist/ && cp schematics/clean-module/schema.json dist/clean-module/ && mkdir -p dist/core && cp schematics/core/schema.json dist/core/",
+    "copy:templates": "cp -r schematics/clean-module/files dist/clean-module/ && cp -r schematics/core/files dist/core/",
     "prepublishOnly": "npm run build",
     "test": "echo \"No tests yet\" && exit 0"
   },
